# scale-car-software-testbed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp_notes.md  partitions.csv  sdkconfig  sdkconfig.old
components/ConfigManager/: CMakeLists.txt  config_manager.cpp  config_manager.h
components/GPS/: CMakeLists.txt  Kconfig.projbuild  gps.cpp  gps.h
components/SBUS/: CMakeLists.txt  Kconfig.projbuild  SBUS.cpp  SBUS.h
components/SystemMonitor/: CMakeLists.txt  system_monitor.cpp  system_monitor.h
components/TelemetryManager/: CMakeLists.txt  Kconfig.projbuild  esp_now_interface.cpp  esp_now_interface.h  telemetry_manager.cpp  telemetry_manager.h  telemetry_types.h
components/data_manager/: CMakeLists.txt  DataManager.cpp  DataManager.h
components/data_pool/: CMakeLists.txt  data_pool.cpp  data_pool.h
components/dshot_controller/: CMakeLists.txt  Kconfig.projbuild  dshot.cpp  dshot.h  dshot_controller.cpp  dshot_controller.h  dshot_esc_encoder.c  esc_driver.cpp  esc_driver.h
components/imu/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  imu.cpp  imu.h  what is git
components/imu/backends/: bno08x.cpp  bno08x.h
components/imu/include/: imu.h  imu_backend.h  imu_types.h
components/log_monitor/: CMakeLists.txt  log_monitor.cpp  log_monitor.h
components/nav/: CMakeLists.txt  gps.cpp
components/nav/include/: gps.h  gps_types.h
components/power_monitor/: CMakeLists.txt  power_monitor.cpp  power_monitor.h
components/proto_nmea/: CMakeLists.txt  idf_component.yml  nmea_driver.cpp
components/proto_nmea/include/: nmea_driver.h
components/rc/: CMakeLists.txt  idf_component.yml  rclink.cpp
components/rc/backends/: elrs.cpp  elrs.h  sbus.cpp  sbus.h
components/rc/include/: channel_types.h  rc_backend.h  rclink.h
components/rgb_led/: CMakeLists.txt  idf_component.yml  rgb_led.cpp
components/servo/: CMakeLists.txt  Kconfig.projbuild  servo.cpp  servo.h
components/shared/: CMakeLists.txt  data_types.h  quaternion.h  sensor_types.h  system_types.h  telemetry_types.h
components/steering_control/: CMakeLists.txt  steering_control.cpp  steering_control.h
components/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry.md
components/vdc/: CMakeLists.txt  pid.cpp  pid.h  steering_pid.cpp  steering_pid.h  vdc.cpp  vdc.h
components/vehicle/: CMakeLists.txt  idf_component.yml  vehicle_controller.cpp
components/vehicle_dynamics_controller/: CMakeLists.txt  vehicle_dynamics_controller.cpp  vehicle_dynamics_controller.h
components/voltage_sensor/: CMakeLists.txt  voltage_sensor.cpp  voltage_sensor.h
components/waypoint_storage/: CMakeLists.txt  waypoint_storage.cpp
main/: CMakeLists.txt  DShotRMT.cpp  idf_component.yml  main.c  main.cpp  pwm_input.c  pwm_input.h  sbus.cpp
main/include/: DShotRMT.h  motor_control.h  pwm_capture.h  sbus.h
(+5 files in other folders)
